[package]
name = "fldtools"
version = "0.1.1"
edition = "2018"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
description = "Library to pack and unpack FLD files for use with Magical School Lunar! (1997)"
homepage = "https://github.com/mistydemeo/fldtools"
repository = "https://github.com/mistydemeo/fldtools.git"
license = "LGPL-3.0"
license-file = "LICENSE"
readme = "README.md"
categories = ["parsing", "parser-implementations", "encoding", "filesystem"]
keywords = ["game", "parser", "lunar"]

[dependencies]
byteorder = "1.1.0"
clap = "2.24.2"
itertools = "0.6.1"
